fixes few drawer layout issues and drawer flicker

--- a/client/components/map/drawer.scss
+++ b/client/components/map/drawer.scss
@@ -12,7 +12,7 @@
     width: 100%;
     right: -100%;
     margin-bottom: 0;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgb(255, 255, 255);
     box-shadow: -5px 0 15px rgba(43, 47, 51, 0.6);
     border-top: 1px solid #eee;
     transition: all 0.3s linear;
